# Changelog
All notable changes to this project will be documented in this file.

The format is loosely based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).

## [0.4.0]
- Add single falcon CustomApp to avoid reloading repos on every call
- Add support for user folder lookups in HTTPGitApplication
- Add support for segregated user folder ownership and authorization on repo write
- Updated the default HAG_HOME to be the ~/.hag
- Removed /repos references
- Remove extra code wrapping HTTPGitApplication
- Fix manage.py tag and publish

## [0.3.0]
- Add anonymous unauthenticated read operations on git repos
- Add authentication support for write operations on git repo

## [0.2.0]
- Add initial git smart http handling via dulwich
- Add middleware hcli falcon auth and fix 3rd party hcli response
- Add repos location config and HAG_HOME support
- Add logger output and cleanup outstanding printouts
- Remove repos test folder
- Remove outstanding hcli_hai references

## [0.1.0]
- Initial simple implementation of hag.